# jebbysays

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  chief.sqlite3  index.html  jebbysays.sqlite3  justfile  personality.md  test.sh
.sqlx/: query-002d293c501005c025256289cb7ef4f89f767c53ad62a544b68cb7e8f6750c96.json  query-21f5bd353a190b593652ed4308cfedf9d6ffdb6d493df4fb5e92951c5d8529de.json  query-2bf7faebad5a9f0c43f250ced395432b4403f63c00c53eefc23e8c2631f76ac8.json  query-41050429d56f380f479194c75d1b4e92356c285a23e580e7afea2fa812f737e6.json  query-9a60ae96398dc07faf7360c43ffdbae23577151585dfea78e60dc4f72a49288b.json  query-a1053c34dfc0c754bcd9c9d3b26064116b74bdaaf91c9132005fbf0e53e54d5a.json
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: ask_jebby.rs  dashboard.rs  divider.rs  footer.rs  get_started.rs  hero.rs  how_it_works.rs  mod.rs  navbar.rs  who_is_jebby.rs  why_jebby.rs
deploy/: jebbysays.service
frontend/: Cargo.toml
jebbysays-core/: Cargo.toml
jebbysays-core/src/: http.rs  lib.rs  portfolio.rs  prompts.rs  resources.rs  tools.rs  types.rs
jebbysays-core/src/auth/: jwks.rs  mod.rs  pkce.rs  web.rs
migrations/: 20260318233136_base.down.sql  20260318233136_base.up.sql  20260320142316_add_user_id.down.sql  20260320142316_add_user_id.up.sql  20260322161309_add_depends_on.up.sql
src/: file_handler.rs  http.rs  main.rs  portfolio.rs  prompts.rs  resources.rs  tools.rs  types.rs
src/auth/: jwks.rs  middleware.rs  mod.rs
style/: tailwind.css
