[package]
name = "chief"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
jiff = { version = "0.2.23", features = ["serde"] }
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
rmcp = { version = "1.2.0", features = [
  "transport-io",
  "transport-streamable-http-server",
] }
schemars = { version = "1.2.1", features = ["jiff02"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "json",
  "macros",
  "runtime-tokio",
  "sqlite"
] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }
