[package]
name = "app"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icondata.workspace = true
jebbysays-core = { path = "../jebbysays-core", default-features = false , version = "0.2.1" }
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_icons.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use = { workspace = true }
sqlx = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }

cfg-if.workspace = true
http.workspace = true
jiff = { workspace = true }
serde = { workspace = true }
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:leptos_axum",
  "dep:sqlx",
  "dep:tower-sessions",
  "jebbysays-core/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-use/axum",
  "leptos-use/ssr",
  "leptos/ssr"
]
